--- a/package.json
+++ b/package.json
@@ -1,24 +1,23 @@
 {
+  "type": "module",
   "scripts": {
     "build": "rollup -c",
     "watch": "rollup -c -w"
   },
   "dependencies": {
-    "vue": "3.0.0-rc.5"
+    "vue": "^3.2.47"
   },
   "devDependencies": {
-    "@rollup/plugin-alias": "3.1.1",
-    "@rollup/plugin-commonjs": "15.0.0",
-    "@rollup/plugin-node-resolve": "9.0.0",
-    "@rollup/plugin-replace": "2.3.3",
-    "@vue/compiler-sfc": "3.0.0-rc.13",
-    "babel-eslint": "10.1.0",
-    "eslint": "7.9.0",
-    "eslint-plugin-vue": "7.0.0-beta.1",
-    "prettier": "2.1.2",
-    "rollup": "2.27.1",
-    "rollup-plugin-css-only": "2.1.0",
-    "rollup-plugin-terser": "7.0.2",
-    "rollup-plugin-vue": "6.0.0-beta.10"
+    "@rollup/plugin-alias": "^4.0.3",
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-replace": "^5.0.2",
+    "@rollup/plugin-terser": "^0.4.0",
+    "@vue/compiler-sfc": "^3.2.47",
+    "eslint": "^8.37.0",
+    "eslint-plugin-vue": "^9.10.0",
+    "prettier": "^2.8.7",
+    "rollup": "^3.20.2",
+    "rollup-plugin-vue": "6.0.0"
   }
 }
