--- a/package.json
+++ b/package.json
@@ -8,16 +8,14 @@
     "vue": "^3.2.47"
   },
   "devDependencies": {
-    "@rollup/plugin-alias": "^4.0.3",
-    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-alias": "^5.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-replace": "^5.0.2",
     "@rollup/plugin-terser": "^0.4.0",
-    "@vue/compiler-sfc": "^3.2.47",
+    "@vitejs/plugin-vue": "^4.2.3",
     "eslint": "^8.37.0",
     "eslint-plugin-vue": "^9.10.0",
     "prettier": "^2.8.7",
-    "rollup": "^3.20.2",
-    "rollup-plugin-vue": "6.0.0"
+    "rollup": "^3.20.2"
   }
 }
